--- a/.github/workflows/notify_update.yml
+++ b/.github/workflows/notify_update.yml
@@ -13,7 +13,7 @@ jobs:
         run: |
           curl -L \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/WangZhiYao/HomeSensor/dispatches \
           -d '{"event_type": "update_submodule"}'
